# forecose

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yaml
src/forecose/: __init__.py  const.py  forecose.py  glucose_forecast.py  kinetics.py
tests/: test_forecast.py
