[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "forecose"
version = "0.1.1"
authors = [
    {name = "Alexander Sadler"}
]
description = "A time-series forecasting extension for pydexcom using Google's TimesFM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pydexcom",
    "timesfm[torch]>=2.0.0"
]