[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "forecose"
version = "0.2.0"
authors = [
    {name = "Alexander Sadler"}
]
description = "A time-series forecasting extension for pydexcom using Google's TimesFM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pydexcom",
    "timesfm[torch]>=2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/forecose"]

[tool.hatch.envs.hatch-test]
dependencies = [
    "pytest",
    "pytest-mock"
]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]